Bug: 0 Comment: Fix layout of expandable divs on IE (position:relative)

--- a/ssf/web/docroot/css/forum.css
+++ b/ssf/web/docroot/css/forum.css
@@ -306,7 +306,6 @@ div.ss_widgetContent {
   }
 .ss_expandable_area_content {
   display: none;
-  position: relative;
   visibility: hidden;
   margin: 0px;
   }
